some of LinkedList to ArrayList