@@ -97,7 +97,7 @@ public class AutorouteControl {
             via_rule = curr_net_class.get_via_rule();
         } else {
             trace_clearance_class_no = 1;
-            via_rule = p_board.rules.via_rules.getFirst();
+            via_rule = p_board.rules.via_rules.get(0);
             curr_net_class = null;
         }
         for (int i = 0; i < layer_count; ++i) {
